2003-08-21  Gert-Jan Paulissen  <g.paulissen@chello.nl>

        * Added dejagnu testsuite.

2003-03-20  Gert-Jan Paulissen  <g.paulissen@chello.nl>

        * configure.ac: Added check for functions sleep or Delay.
	* configure.ac: Moved clock to the last of functions for measuring time.

2003-03-10  Gert-Jan Paulissen  <g.paulissen@chello.nl>

        * Create VERSION file from PACKAGE_VERSION.

1999-05-01  Gert-Jan Paulissen  <g.paulissen@chello.nl>

        * For historical reasons, this is when I first started development
	with DBUG.
